--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Android CI (Wi‑Fi Direct P2PChat)
+name: Android CI (Wi-Fi Direct P2PChat)
 
 on:
   push:
@@ -23,10 +23,10 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
-          packages: |
-            platforms;android-34
-            build-tools;34.0.0
-            platform-tools
+          packages: 'platforms;android-34, build-tools;34.0.0, platform-tools'
+
+      - name: Accept Android SDK licenses
+        run: yes | sdkmanager --licenses
 
       - name: Set up Gradle (no wrapper)
         uses: gradle/gradle-build-action@v3
@@ -41,62 +41,3 @@ jobs:
         with:
           name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
-
-  # === Optional: Release build on tag (requires signing config in app/build.gradle) ===
-  # build-release:
-  #   if: startsWith(github.ref, 'refs/tags/v')
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Set up JDK 17
-  #       uses: actions/setup-java@v4
-  #       with:
-  #         distribution: temurin
-  #         java-version: '17'
-  #         cache: 'gradle'
-  #
-  #     - name: Set up Android SDK
-  #       uses: android-actions/setup-android@v3
-  #       with:
-  #         packages: |
-  #           platforms;android-34
-  #           build-tools;34.0.0
-  #           platform-tools
-  #
-  #     - name: Decode keystore (from GitHub secrets)
-  #       env:
-  #         ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
-  #       run: |
-  #         echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > keystore.jks
-  #
-  #     - name: Build release APK (requires signingConfig in app/build.gradle)
-  #       env:
-  #         ANDROID_KEYSTORE_FILE: keystore.jks
-  #         ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-  #         ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-  #         ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-  #       run: |
-  #         # Ensure your app/build.gradle reads these env vars or a properties file.
-  #         # Example signing block you should add to app/build.gradle:
-  #         # android {
-  #         #   signingConfigs {
-  #         #     release {
-  #         #       storeFile file(System.getenv("ANDROID_KEYSTORE_FILE"))
-  #         #       storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
-  #         #       keyAlias System.getenv("ANDROID_KEY_ALIAS")
-  #         #       keyPassword System.getenv("ANDROID_KEY_PASSWORD")
-  #         #     }
-  #         #   }
-  #         #   buildTypes {
-  #         #     release { signingConfig signingConfigs.release }
-  #         #   }
-  #         # }
-  #         gradle --no-daemon assembleRelease
-  #
-  #     - name: Upload release APK
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: app-release.apk
-  #         path: app/build/outputs/apk/release/app-release.apk
