--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,12 +18,15 @@ jobs:
         with:
           distribution: temurin
           java-version: '17'
-          cache: 'gradle'
+          cache: gradle
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
-          packages: 'platforms;android-34, build-tools;34.0.0, platform-tools'
+          packages: |
+            platforms;android-34
+            build-tools;34.0.0
+            platform-tools
 
       - name: Accept Android SDK licenses
         run: yes | sdkmanager --licenses
